--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 .div_login{
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: black;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -19,8 +19,9 @@
     outline: none;
     font-size: 15px;
 }
+
 .button{
-    background-color: #d36833;
+    background-color: #846D62;
     border: none;
     padding: 15px;
     width: 100%;
@@ -31,7 +32,9 @@
 
 }
 .button:hover{
-    background-color: #d36833;
+    color: #eee;
+    background-color: #525050;
     cursor: pointer;
     opacity: 1;
 }
+
