--- a/css/styleLog.css
+++ b/css/styleLog.css
@@ -14,153 +14,77 @@ body {
 position: relative;
 }
 
-.img-wrapper {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.img-wrapper img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  opacity: 0.5;
-  animation: zoom 15s;
-}
-
-@keyframes zoom {
-  0% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.container{
-  position: absolute;
-  top: 1em;
-  left: 30%;
-  border: 3px solid #085178d4;
+#container {
+  border: 3px solid #2B2B2B;
   box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.8);
-  border-color: #085178d4;
-  background: #77A1D3;
-  padding: 0 0 3em 0;
-  margin: 5em auto;
+  border-color: #525050;
+  background: #846D62;
+  margin: 3em 5em;
 }
 
-.container form, div {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+.dados, h1{
+  text-align: center;
 }
 
-.container input, button{
-  border: none;
-  border-radius: 5px;
+
+fieldset {
   padding: 10px;
-  margin-bottom: 5px;
-  box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);
-  margin: 10px;
-  background: #08517874;
-}
-
-.container h1 {
+  border: 3px solid #525050;
+  border-radius: 10px;
+  width: 800px;
+  margin: 4em 1em 0 1em;
+  display: flex;
+  flex-wrap: wrap;
   color: #eee;
-  text-transform: uppercase;
-  margin: 1em 1em 1.6em 1em;
-  text-align: center;
-  font-size: 2em;
-  box-shadow: 0 0.1em rgba(0, 0, 0, 0.3);
-}
-
-.container h3{
-  color: #eee;
-  margin: 1em;
-  text-align: center;
-  font-size: 2em;
-}
-
-.container p{
-  color: black;
-  text-align: center;
-  font-size: 1.7em;
-  margin-bottom: 1em;
-}
-
-.container ul{
-  color: black;
-  text-align: left  ;
-  font-size: 1.5em;
-  margin-bottom: 1em;
-}
-
-
-.field-label {
-  color: #eee;
-  font-size: 1em;
-  font-weight: bolder;
-  text-transform: uppercase;
-}
-
-.input-group textarea {
-  padding-top: 1rem;
-  max-width: 25rem;
-  max-height: 3rem;
-}
-
-.field:focus {
-  background: #ffffff6c;
 }
 
 .field {
-  width: 12em;
-  font-size: 1em;
-  height: 2rem;
-  border-radius: 15px;
-  margin: 1rem 0;
-  cursor: pointer;
-  text-align: center;
+  margin-bottom: 1em;
+  width: 50%;
+  font-size: 1.6em;
+  font-weight: 900;
 }
 
-.field-submit, button{
-  color: #eee;
-  background: #b79891;
-  background: -webkit-linear-gradient(to right, #94716b, #b79891);
-  background: linear-gradient(to right, #94716b, #b79891);
-  width: 7em;
-  height: 3em;
-  text-transform: uppercase;
-  font-weight: bolder;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  font-size: 1em;
+
+legend {
+  font-weight: bold;
+  font-size: 18px;
+  color: #fff;
 }
 
-#button{
-  border-radius: 0;
+.botao {
+  font-size: 1.5em;
+  background: #525050;
+  border: 0;
+  margin-bottom: 1.2em;
+  color: #ffffff;
+  padding: 0.2em 0.6em;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  top: 95%;
+  left: 50%;
 }
 
-.field-submit:hover{
+.botao:hover {
+  background: #DDC6A4;
+  box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
+  text-shadow: none;
   color: black;
-  box-shadow: 0 1px 15px 7px #eee;
 }
 
-button:hover {
-  color: black;
-  box-shadow: 0 1px 15px 7px #eee;
+.botao,
+select {
+  cursor: pointer;
 }
 
-.container input::placeholder {
-  color: #b79891;
-  font-size: 15px;
-  font-weight: 500;
-  text-transform: uppercase;
-  text-align: center;
+/* Responsive CSS */
+@media screen and (max-width: 768px) {
+  form {
+    margin: 4em 0.5em 0 0.5em;
+  }
+
+  .field {
+    width: 100%;
+    margin-right: 0;
+  }
 }
-
-
-
-
