--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2? family= Bebas+Neue & family= Roboto+Mono:ital,wght@0,400;0,600;1,300 & family= Source+Serif+Pro: ital,wght@0,600;1,600 & display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
 *{
     margin: 0;
     padding: 0;
@@ -28,11 +30,11 @@
     -webkit-border-radius: 50%;
     padding: 3px;
     background-color: #DDC6A4;
- }
+}
 
 .main_header .navbar {
     display: flex;
-    align-items: stretch;
+    align-items: baseline;
 }
 
 .main_header .navbar a {
@@ -52,8 +54,50 @@
     background-color: #846D62;
 }
 
-/*FIM - TOPO*/
+.main_header .navbar img {
+  max-width: 2.7em;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  padding: 3px;
+  background-color: #DDC6A4;
+}
 
+.main_header .search-box form{
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #574740;
+  color: white;
+  text-decoration: none;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+}
+
+.main_header .search-box button{
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #574740;
+    color: white;
+    text-decoration: none;
+}
+
+.main_header .search-box input{
+    padding: 0.4em;
+    border: 1px solid #846D62;
+    border-radius: 4px;
+    width: 20em;
+    background-color: #ddc6a498;
+}
+
+.main_header .search-box input:focus{
+    background: #DDC6A4;
+}
+
+/*FIM - TOPO*/
 
 /*INICIO - 1ª DOBRA*/
 
