--- a/css/style.css
+++ b/css/style.css
@@ -154,16 +154,16 @@
     margin: 30px 0;
 }
 
-.main_blog_header h1{
-color:#333;
-margin-bottom: 5px;
-font-size: 3em;
-text-align: center;
+.main_blog_header h1 {
+    color:#333;
+    margin-bottom: 5px;
+    font-size: 3em;
+    text-align: center;
 }
 
 .main_blog aside{
-flex-basis: calc(25% - 20px);
-margin-bottom: 30px;
+    flex-basis: calc(25% - 20px);
+    margin-bottom: 30px;
 }
     
 .main_blog aside p{
@@ -234,13 +234,80 @@ margin-bottom: 30px;
 
 /*INICIO DOBRA RODAPE*/
 
+.main_optin_footer{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: #525050;
+    padding:0 20px;
+    margin: 0 auto;
+}
+
+.main_optin_header{
+    flex-basis: 100%;
+    margin: 30px 0;
+}
+
+.main_optin_header h1{
+    color:#eee;
+    margin-bottom: 5px;
+    font-size: 3em;
+    text-align: center;
+}
+
+.main_optin_footer aside{
+    flex-basis: calc(25% - 20px);
+    margin-bottom: 30px;
+}
+
+.main_optin_footer aside h2{
+    color:#eee;
+    margin: 10px 0;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+
+.main_optin_footer .main_optin_footer_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    text-align: center; 
+    padding: 30px;
+}
+
+.main_optin_footer .main_optin_footer_content a{
+    text-decoration: none;
+}
+
+.main_optin_footer .btn {
+    width: 50%;
+    padding: 15px;
+    background-color: #846D62;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    text-decoration: none;
+    border-radius: 20px;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.main_optin_footer .btn:hover{
+   background-color: #DDC6A4;
+   color: black;
+}
+
+
+
 .main_footer{
     padding: 40px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     color: #eee;
-    background-color: #525050;
+    background-color: #2B2B2B;
     font-weight: 600;
 }
 
@@ -272,9 +339,9 @@ margin-bottom: 30px;
     
 }
 
-footer p{
+footer .copy{
     color: #eee;
-    background-color: #525050;
+    background-color: #2B2B2B;
     font-weight: 600;
     text-align: center;
     padding: 15px 0 15px 0;
